<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linearLayout_dummy1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".15"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:onClick="resetButtonClicked"
                android:tag="@string/button_1"
                android:text="@string/work_button"
                android:background="@drawable/green_button"></Button>

            <Button
                android:id="@+id/button_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="resetButtonClicked"
                android:layout_marginTop="3dp"
                android:tag="@string/button_2"
                android:text="@string/study_button"
                android:background="@drawable/yellow_button"></Button>

            <Button
                android:id="@+id/button_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="resetButtonClicked"
                android:layout_marginTop="3dp"
                android:tag="@string/button_3"
                android:text="@string/leisure_button"
                android:background="@drawable/violet_button"></Button>

            <Button
                android:id="@+id/button_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="resetButtonClicked"
                android:layout_marginTop="3dp"
                android:tag="@string/button_4"
                android:text="@string/eating_button"
                android:background="@drawable/blue_button"></Button>

            <Button
                android:id="@+id/button_pause"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="pauseButtonClicked"
                android:layout_marginTop="3dp"
                android:text="Pause"
                android:visibility="invisible"
                android:background="@drawable/graph_button"></Button>/>






            <Chronometer
                android:id="@+id/chronometer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/chronometer1"
                android:textSize="30sp" />

            <com.echo.holographlibrary.PieGraph
                android:id="@+id/graph"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="graphButtonClicked"
                android:layout_marginTop="3dp"
                android:text="Graphs"
                android:background="@drawable/graph_button"></Button>/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_dummy2"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".15"
            android:orientation="horizontal"></LinearLayout>
    </LinearLayout>

</LinearLayout>
